Bug 252984. Remove focus and tab navigation code that's no longer necessary which is actually breaking some form controls. r=bryner, sr=bz